# TuneSync

./: .gitignore  .replit  CHANGES_SUMMARY.md  DEMO_STEPS.md  FINAL_SOLUTION.md  LOCALHOST_SOLUTION.md  LOCAL_SETUP.md  README.md  SPOTIFY_REDIRECT_FIX.md  alternative_solution.py  app.py  database.py  debug_oauth.py  demo_oauth_solution.py  deployment_instructions.md  fix_deployment.md  main.py  process_oauth_code.py  pyproject.toml  replit.md  routes.py  run_local.py  session.txt  setup_ngrok.py  spotify_auth.py  test_external.py  test_login.html  youtube_music.py
.config/ngrok/: ngrok.yml
attached_assets/: Pasted-Prompt-Build-a-web-app-called-SyncTunes-that-syncs-playlists-between-Spotify-and-YouTube-Music--1754663549838_1754663549839.txt
static/: style.css
templates/: base.html  index.html  login.html  playlists.html  register.html  sync.html  test_oauth.html
