[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
    "ytmusicapi>=1.11.0",
]

[tool.setuptools]
py-modules = ["app", "database", "main", "routes", "spotify_auth", "youtube_music"]
